Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58264

qmlplugindump crashes when analyzing ChartView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.0 Beta 2
    • 5.7.1, 5.9.1
    • Build tools: Other
    • None
    • Linux Red Hat 6
    • bdb18b54717f2f97364de811bebc14a31becf1b7

    Description

      I have a Qml plugin with several qml files bundled as resources. Running qmlplugindump as a post build step using CMake and it works fine.

      When adding a qml file using a ChartView, the plugin itself works fine but qmlplugindump crashes with segfault.

      Proposal

      I know that QtCharts requires applications to use QApplication instead of QGuiApplication. So when I changed this in tools/qmlplugindump/main.cpp and added QT += widgets in tools/qmlplugindump/qmlplugindump.pro and rebuild qmlplugindump it worked fine.

      Seems like an easy solution if there are not side effects.

      Re-opened, see comment below

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mabenell Marco Benelli
            pm Per-Magnus Holtmo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes